
2015-March-07 Struan Robertson

	* SensitivityAnalysis.cpp: Implementation of both additive and ration control
	variate methods for	variance reduction.

2015-March-04 Struan Robertson

	* SensitivityAnalysis.cpp: Initial implementation of additive control variate 
	method for variance reduction.

2015-March-03 Struan Robertson

	* SensitivityAnalysis.cpp: Refactoring of main sensitivity analysis method.

2015-March-01 Struan Robertson

	* Documentation: Updated "What's New".

2015-March-01 Struan Robertson

	* SensitivityAnalysis.cpp: Added implementation to write indices to
	output .xml.
	
2015-February-28 Struan Robertson

	* UnitTest.cpp: Fix for test break (roll back of 17-Feb-2015 change).

	* SensitivityAnalysis.cpp: R-squared statistic added.
	
2015-February-27 Struan Robertson

	* System.cpp: Fix for Chebyshev test break.
	
2015-February-22 Chris Morley

    * Windows VC12/Mesmer/Mesmer.vcxproj: Debug mesmer.exe now in
    \Windows VC12\Debug\  Release exe still in \Windows VC12\Mesmer\

    * src/plugins/HinderedRotorQM1D.cpp: use only one endl;

2015-February-21 Chris Morley

    * src/gDensityOfStates.cpp: Modify handling of energy conventions;
    thermodynamic298K now used only internally to aid conversion.

    * src/XMLPersist.cpp,src/XMLPersist.h: a default property attribute is
    now achieved by copying attributes; a slightly different entry in
    defaults.xml still allows copying a whole missing property.

    * MesmerQA/UnitTests/UnitTests.xml: Removed specification of the
    molecule energies in the datafile, which are unused. Baseline is
    unchanged.

    * src/gStructure.cpp,src/MoleculeManager.cpp: messages and formatting.

src/plugins/ThermodynamicTable.cpp

2015-February-19 Struan Robertson

	* System.h: Set micro properties re-calculation flag for sensitivity
	analysis.
	
2015-February-17 Struan Robertson

	* SensitivityAnalysis.cpp: Fix for old SA table generation method.
	
2015-February-17 Struan Robertson
